--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div id="backdrop"></div>
     <header id="main-header">
-      <h1>Play Tic Tac Toe</h1>
+      <h1>Play <u> | Tic | Tac | Toe | </u></h1>
       <p>Built with HTML, CSS, JavaScript and - of course - lots of love!</p>
     </header>
     <main>
